--- a/LeNet-Lab.ipynb
+++ b/LeNet-Lab.ipynb
@@ -22,11 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "\n",
+      "Image Shape: (28, 28, 1)\n",
+      "\n",
+      "Training Set:   55000 samples\n",
+      "Validation Set: 5000 samples\n",
+      "Test Set:       10000 samples\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
@@ -62,11 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Image Shape: (32, 32, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -91,11 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAFsAAABZCAYAAABR/liSAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAABnpJREFUeJztnF1oFFcUx3+na+IHkaSxfiQmNmWtD30QLVqFgC+lEKqk\nLQvFYEoeqvZBoX0SEcSAVtrS1seCsUGUxlKIElGxRixCwY/YENuopA0ltWpqLKSmXXaJmz192Nkl\najaZ3Z292V3vD4aZndk79+w/J+d+zJkrqorFDM9NtwHPElZsg1ixDWLFNogV2yBWbINYsQ2Skdgi\nUicifSLSLyI7vTKqUJF0BzUi4gN+Bd4A7gBdQIOq3vTOvMJiRgZlXwP6VfV3ABH5FngLSCq2iBTs\ncFVVZarvZBJGFgN/jvt8xzn3GCKyVUSuici1DOoqCDLxbFeo6kHgIBS2Z7shE8++C1SP+1zlnLMk\nIROxu4CXReQlESkGNgInvTGrMEk7jKhqRES2A98DPqBVVW94ZlkBknbXL63KCjhmZ7s3YkkRK7ZB\nrNgGKSix/X4/fr+f3bt3MzQ0xNDQEKqKqhKNRolGo3R2dlJeXk55eTkigsiUodYzCkrsXCfveyM1\nNTXs2rULgA0bNgCwaNEiurq6ABgZGQFgzZo1AJSUlCTKLlu2DID+/v6M7bC9kRwj63Mj2cLv9wNw\n9uzZxHHci7dt20ZbWxsADx8+BGDJkiUAXL16lQULFgCwcuVKwBvPdkPeib18+XIAzp07B8CcOXNo\nbW0FYN++fQAMDAw8Ve727dsAjI6OGrByYmwYMUjeePaqVasAOHbsGEAiFOzdu5c9e/a4vk9bWxs7\nduwAoKKiwmMrJ8d6tkHyxrP3798PkBiEbNmyBYDDhw+ndB+fz5c47u7u9sY4l1jPNkjeDGqKi4sB\niEajAEQikZTKL126FIh588WLFwGor68HwAsN3Axq8iaMpNtlKysrA+DAgQMAzJo1K9EHN52bbsOI\nQfLGs1NlxozYT9u8eTMA69evB+D06dOJ7qNprGcbJG8ayFTw+Xxs3LgRgKNHjwIwODgIQCAQ4PLl\ny57X6aaBTEyum9gAzeYmIioi2tjYqNFoVKPRqAaDQQ0GgxoIBDQQCGStbje/34YRgxRUA7lp0yYA\njhw5QjgcBqCxsRGAEydOTJtdcaxnG6QgGsimpiYADh06BMRGmevWrQPgypUr2ajyKTx5LCYi1SLy\ng4jcFJEbIvKhc75cRDpF5Ddn/7wXRhc0LnoQFcCrzvFcYm8bvAJ8Bux0zu8EPp2O3khdXZ2GQiEN\nhUIaiUQ0EolofX19Vns9E22uemNpdN86iL3a0QdUjPuD9JkUu7KyUisrK/XBgwcaDoc1HA5rc3Oz\nNjc3Gxfardgp9UZEpAZYCVwBFqrqoHPpL2BhkjJbga2p1FOouG4gRaQEuAh8rKrHReQfVS0bd31Y\nVSeN2140kKWlpQCcOnUKgPnz5ydGiz09PZnePm08yxsRkSKgHfhGVY87p++LSIVzvQIYStfQZ4Up\nw4jEnkN9DdxS1S/HXToJNAGfOPuOrFjoMG/ePADa29sBqK2tBWK5H9evX09aLv5gOJ4/UlRURE1N\nTUp137wZewEu/uAiXdzE7FrgPeAXEYn/n+4iJvJ3IvI+8AfwbkaWPANMKbaq/ggki0eve2tOclpa\nWgASg5VLly4BsRi+du1aAKqqqgBYvXo1s2fPBqChoQGAYDAIxGYEFy9+6g3CSQkEAkDmQ/68GEHW\n1tZy/vx5AGbOnOmqTHxuZHh4GIDe3t7Etfh066NHj4DHn7JfuHABgOrq2ItwpaWlnDlzBoBQKJS0\nPptYmWPkxaxfUVFRolt37969p67HPS/uzR0dHYmHuWNjY49dc0tfX1/a9ibDerZB8iJm5wM2ZucY\nVmyDWLENYsU2iBXbIFZsg1ixDWLFNogV2yCm50b+BoLOPtd5Afd2vujmS0aH6wAick1VVxmtNA2y\nYacNIwaxYhtkOsQ+OA11poPndhqP2c8yNowYxJjYubzW9iSZus0icldEepztzYzqMRFGcn2tbSej\nq0JVu0VkLvAT8DaxXJj/VPVzL+ox5dmJtbZVdRSIr7WdE6jqoKp2O8f/AreYYHnqTDEltqu1tnOB\nJzJ1AbaLyM8i0pppwr9tIMfhZOq2Ax+p6gjwFeAHVgCDwBeZ3N+U2Dm/1vZEmbqqel9Vx1Q1CrQQ\nC4dpY0rsnF5rO1mmbjwl2uEdoPfJsqlgZNZPc3+t7WSZug0isoLYqxwDwAeZVGJHkAaxDaRBrNgG\nsWIbxIptECu2QazYBrFiG8SKbZD/AUeN6MNibqxyAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fea1f64c748>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import random\n",
     "import numpy as np\n",
@@ -123,9 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -146,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -200,42 +237,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
+    "# x is the input of the neural network... here is image set\n",
     "def LeNet(x):    \n",
     "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
     "    # TODO: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "\n",
+    "    conv1_w = tf.Variable(tf.truncated_normal(shape=(5, 5, 1, 6), mean=mu, stddev=sigma))\n",
+    "    # Generate 4D kernel of shape [height, width, in_channel, out_channel], initialize with normal distribution\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    # Initialize bias terms\n",
+    "    \n",
+    "    conv1 = tf.nn.conv2d(x,  conv1_w, strides=[1, 1, 1, 1], padding=\"VALID\") + conv1_b\n",
+    "                          \n",
+    "                              \n",
     "    # TODO: Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "    # activation1\n",
     "\n",
     "    # TODO: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding=\"VALID\")\n",
+    "    # HW will be divided by 2, so kernel size is 2x2\n",
     "\n",
     "    # TODO: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_w = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean=mu, stddev=sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2 = tf.nn.conv2d(conv1, conv2_w, strides=[1, 1, 1, 1], padding=\"VALID\") + conv2_b\n",
     "    \n",
     "    # TODO: Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
     "\n",
     "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding=\"VALID\")\n",
     "\n",
     "    # TODO: Flatten. Input = 5x5x16. Output = 400.\n",
-    "    \n",
+    "    fc0 = flatten(conv2)\n",
+    "    print(\"fc0shape\",fc0.shape)\n",
     "    # TODO: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_w = tf.Variable(tf.truncated_normal(shape=(400, 120), mean=mu, stddev=sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1 = tf.matmul(fc0, fc1_w) + fc1_b \n",
     "    \n",
     "    # TODO: Activation.\n",
+    "    fc1 = tf.nn.relu(fc1)\n",
     "\n",
     "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_w = tf.Variable(tf.truncated_normal(shape=(120, 84), mean=mu, stddev=sigma))\n",
+    "    fc2_b = tf.Variable(tf.zeros(84))\n",
+    "    fc2 = tf.matmul(fc1, fc2_w) + fc2_b \n",
     "    \n",
     "    # TODO: Activation.\n",
+    "    fc2 = tf.nn.relu(fc2)\n",
     "\n",
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_w = tf.Variable(tf.truncated_normal(shape=(84, 10), mean=mu, stddev=sigma))\n",
+    "    fc3_b = tf.Variable(tf.zeros(10))\n",
+    "    logits = tf.matmul(fc2, fc3_w) + fc3_b\n",
+    "\n",
     "    \n",
     "    return logits"
    ]
@@ -255,9 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -278,11 +343,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fc0shape (?, 400)\n"
+     ]
+    }
+   ],
    "source": [
     "rate = 0.001\n",
     "\n",
@@ -305,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -344,11 +415,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training...\n",
+      "\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.973\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.979\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.980\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.986\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.985\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.988\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.987\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
@@ -388,11 +497,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy = 0.986\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
@@ -400,6 +515,15 @@
     "    test_accuracy = evaluate(X_test, y_test)\n",
     "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -419,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   },
   "widgets": {
    "state": {},
@@ -427,5 +551,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
